--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       </nav>
     </div>
     </header>
-   
+   <main>
+    <h1 > my first web page</h1>
+    
+    <img src="image.png" alt="A description of the image" />
+   </main>
   </body>
 </html>
